--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
-version: '3'
+version: '3.8'
 services:
   app:
     build:
+      #関連ファイルの格納先を指定
       context: .
     command: bundle exec puma -C config/puma.rb
-
+    container_name: app_container
+    hostname: app_server
     volumes:
+      ＃バインドマウント
       - .:/awstest
       - public-data:/awstest/public
       - tmp-data:/awstest/tmp
@@ -16,7 +19,11 @@ services:
       - db
   
   db:
-    image: mysql:5.7
+    image: mysql:8.0.26
+    platform: linux/x86_64
+    command: --default-authentication-plugin=mysql_native_password
+    container_name: db_container
+    hostname: db_server
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: user
@@ -30,6 +37,8 @@ services:
   web:
     build:
       context: ./nginx_docker
+    container_name: web_container
+    hostname: web_server
     volumes:
       - public-data:/awstest/public
       - tmp-data:/awstest/tmp
