--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,5 +1,5 @@
-upstream awstest{
-  server unix:///awstest/tmp/sockets/puma.sock;
+upstream webapp{
+  server unix:///webapp/tmp/sockets/puma.sock;
 }
 
 server{
@@ -10,18 +10,18 @@ server{
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
 
-  root /awstest/public;
+  root /webapp/public;
 
   client_max_body_size 100m;
   error_page 404             /404.html;
   error_page 505 502 503 504 /500.html;
-  try_files $uri/index.html $uri @awstest;
+  try_files $uri/index.html $uri @webapp;
   keepalive_timeout 5;
 
-  location @awstest {
+  location @webapp {
     proxy_set_header X-Real_IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
-    proxy_pass http://awstest;
+    proxy_pass http://webapp;
   }
 }
