--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,59 +2,40 @@ version: '3.8'
 services:
   app:
     build:
-      #関連ファイルの格納先を指定
       context: .
+    container_name: rails_container
+    env_file:
+      - ./environments/db.env
     command: bundle exec puma -C config/puma.rb
-    container_name: app_container
-    hostname: app_server
     volumes:
-      ＃バインドマウント
-      - .:/awstest
-      - public-data:/awstest/public
-      - tmp-data:/awstest/tmp
-      - log-data:/awstest/log
-    networks:
-      - awstest-network
+      - .:/webapp
+      - public-data:/webapp/public
+      - tmp-data:/webapp/tmp
+      - log-data:/webapp/log
     depends_on:
       - db
-  
   db:
     image: mysql:8.0.26
     platform: linux/x86_64
     command: --default-authentication-plugin=mysql_native_password
-    container_name: db_container
-    hostname: db_server
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-      MYSQL_DATABASE: awstest_development
+    container_name: mysql_container
+    env_file:
+      - ./environments/db.env
     volumes:
       - db-data:/var/lib/mysql
-    networks:
-      - awstest-network
-
   web:
     build:
-      context: ./nginx_docker
-    container_name: web_container
-    hostname: web_server
+      context: containers/nginx
+    container_name: nginx_container
     volumes:
-      - public-data:/awstest/public
-      - tmp-data:/awstest/tmp
+      - public-data:/webapp/public
+      - tmp-data:/webapp/tmp
     ports:
       - 80:80
     depends_on:
       - app
-    networks:
-      - awstest-network
-
 volumes:
   public-data:
   tmp-data:
   log-data:
   db-data:
-
-networks:
-  awstest-network:
-    external: true
