--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,16 @@ services:
       - tmp-data:/webapp/tmp
       - log-data:/webapp/log
     depends_on:
-      - db
-  db:
-    image: mysql:8.0.26
-    platform: linux/x86_64
-    command: --default-authentication-plugin=mysql_native_password
-    container_name: mysql_container
-    env_file:
-      - ./environments/db.env
-    volumes:
-      - db-data:/var/lib/mysql
+  #     - db
+  # db:
+  #   image: mysql:8.0.26
+  #   platform: linux/x86_64
+  #   command: --default-authentication-plugin=mysql_native_password
+  #   container_name: mysql_container
+  #   env_file:
+  #     - ./environments/db.env
+  #   volumes:
+  #     - db-data:/var/lib/mysql
   web:
     build:
       context: containers/nginx
