--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
     build:
       context: .
     container_name: rails_container
-    env_file:
-      - ./environments/db.env
-    command: bundle exec puma -C config/puma.rb
+    # env_file:
+    #   - ./environments/db.env
+    command: bundle exec puma -C config/puma.rb -e production
     volumes:
       - .:/webapp
       - public-data:/webapp/public
       - tmp-data:/webapp/tmp
       - log-data:/webapp/log
-    depends_on:
+    # depends_on:
   #     - db
   # db:
   #   image: mysql:8.0.26
@@ -38,4 +38,4 @@ volumes:
   public-data:
   tmp-data:
   log-data:
-  db-data:
+  # db-data:
